css/main.css
html {
	background-color: #3498db;
	overflow-x: hidden;
	overflow: hidden;
    overflow-y: auto;

}

body {
	margin: 0 auto;
	
}

.logo {

	font-size: 1.5em;
	letter-spacing: 2px;
	height: 50px;
	width: 300px;
	float: left;
	margin-left: 8%;
	margin-top: px;
	font-family: 'Open Sans';
	color: #4A4A4A;
	
}

@media all and (max-width: 800px) {
	.logo {
		font-size: 1.3em;
		line-height: 2;
	}
}


/*Use jquery to change (lower) opacity on scroll (when past jumbotron)*/
.container-nav {
	background-color: white;
	height: 80px;
	z-index: 1;
	position: fixed;
	left: 0px;
	right: 0px;
	
	top: 0;
	
}

@media (max-width: 1080px) {
  .nav {
    display:none;
  }
}
.nav {
	margin-right: 58px;
	margin-top: 25px;
	float: right;


}


.nav a {
	font-family: 'Open Sans';
	display:inline-block;
	margin-left: 58px;
	font-size: 1.25em;
	font-weight: ;
	text-decoration: none;
	color: #4A4A4A;
}
.nav a:hover {
	color: #1A1A1A;
}



.mainheader-container {
	background: url("site_banner-01.svg") no-repeat center center fixed;
	
	-ms-background-size: cover;
    -o-background-size: cover;
    -moz-background-size: cover;
    -webkit-background-size: cover;
	background-size: cover;
	width: 100%
	height: 600px;
	line-height: 600px;
	text-align: center;
	margin-bottom: -20px;
}

@media all and (max-width: 1080px) {
	.mainheader-container {
		background: url("site_banner-01.svg")  center center fixed;
		background-attachment: scroll;
	}
}

.jumbotron-text {
	
	


}
/*add media query for iphone text (make smaller)*/


.jumbotron-text h1 {
	font-size: 3.75em;
	font-family: 'Open Sans';
	font-weight: 400;
	display: inline-block;
  	vertical-align: middle;
  	line-height: normal;
	color: white;


	
}

@media (max-width: 1080px) {
	.jumbotron-text h1 {
		font-size: 3em;
		margin-left: 20px;
		margin-right: 20px;
	}
}





.kicker {
	font-size: 20px;
	font-family: 'Open Sans';
	margin: 0px;
	color: #1A1A1A;

}


.about-section-header {
	font-family: 'Open Sans';
	height: 175px;
	left: 0px;
	right: 0px;
	top:0;
	
	
}
.about-section-header h1 {
	line-height: 175px;
	padding-top: ;
	color: #3498db;
	font-size: 1.5em;
	text-align: center;
}
.about-section-container {
	height: 787px;
	background-color: #ececec;
	
	
}

.bio-pic {
  background-color: white;
  width: 250px;
  height: 250px;
  border-radius: 200px; 
  float: right;
  margin-top: 100px;
  margin-right: 200px;


}

@media all and (max-width: 1080px) {
  .bio-pic {
	margin: 0 auto;  
   float:none;
   margin-top: px;
	}
}

@media all and (max-width: 400px) {
	.bio-pic {
	width: 200px;
  	height: 200px;
	}
}
.about-section-container p {

	font-size: 1.5em;
	color: #4A4A4A;
	font-family: 'Open Sans';
	text-align: left;
	margin-left: 80px;
	margin-top: 100px;
	font-weight: 400;

}


@media all and (max-width: 1080px) {
  .about-section-container p {
    text-align: center;
    margin-top:0px;
    margin-left: 10%;
    margin-right: 10%;

  }
}

@media all and (max-width: 400px) {
	.about-section-container p {
		font-size: 1.4em;
	}
}


.work-section-header {
	
	font-family: 'Open Sans';
	height: 175px;
	left: 0px;
	right: 0px;
	top:0;
	
}
.work-section-container {
	height: ;
}

.work-section-header h1 {
	line-height: 175px;
	padding-top: ;
	color: white;
	font-size: 1.5em;
	text-align: center;
}

.project-thumb-container {
	max-width: 960px;
	margin: 0px auto;
	
	overflow: auto;
	padding-bottom: 150px;

}

.thumb-unit {
	width: 25%;
	height: 150px;
	/*placeholder image*/
	background: url("") gray ;
	background-position: center center;
	background-size: cover;
	float: left;
	text-decoration: none;
	position: relative;
	padding-top: ;
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;

	
}

@media all and (max-width: 1000px) {
	.thumb-unit {
		width: 50%;
	}
}
.thumb-overlay {
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: space-around;
	background-color: #ececec;
	opacity: 0;
}

.thumb-overlay:hover {
	opacity: 0.8;
	transition: opacity .25s ease-in-out;
	  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

.thumb-overlay strong {
	display: block;
	font-weight: 400;
	text-transform: uppercase;
	text-decoration: none;
	color: #4A4A4A;
	text-align: center;
	line-height: 150px;

	font-family: 'Open Sans';
}

span {
	font-weight: 600;
}

.contact-section-container {
	height: 700px;
	background-color: #ececec;
	left: 0;

}

.contact-section-header {
	
	font-family: 'Open Sans';
	height: 175px;
	left: 0px;
	right: 0px;
	top:0;
}

.contact-section-header h1 {
	line-height: 175px;
	padding-top: ;
	color: #3498db;
	font-size: 1.5em;
	text-align: center;
}

.social-icons {
	max-width: 800px;
	display: flex;
	justify-content: space-between;
	margin: 0 auto;
	margin-top: px;
	height: px;
	align-items: center;
	overflow: auto;
}



.social-icons {
	max-width: 1000px;
	margin: 0px auto px;
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;

}

.social-icons a {
	display: block;
	background-color: #3498db;
	height: 50px;
	width: 50px;
	text-align: center;
	line-height: 50px;
	color: white;
	border-radius: 50%;
	margin: 50px;

}





.footer {
	background-color: #ececec;
	
	height: 40px;
	width: 100%;
	left: 0px;
	right: 0px;
	
	margin-bottom: px; 
	top: 0;
	
}
.footer p {
	font-family: 'Open Sans';
	display:block;
	text-align: center;
	margin-top: 0px;
	margin-bottom: 0px;
	
	font-size: 1em;
	font-weight: 700;
	text-decoration: none;
	color: #95a5a6;

}

@media all and (max-width: 350px) {
	.footer p {
	font-size: .9em;
	text-align: center;
	margin: 0 auto;
	display: block;
	
	}
}

